@@ -15,6 +15,9 @@ update-manager (1:0.63) gutsy; urgency=low
     - improve free space calculation in /boot (Fixes LP: #116163)
   * Separate downloading and upgrading (Fixes LP: #91978)
   * Show demotions before runing the upgrade (Fixes LP: #91998)
+  * UpdateManager/UpdateManager.py:
+    - re-check for new releases too when the user clicks on 
+      "Check" (Fixes LP: #107452)
 
  --
 
